Fix bug where code editor is visible without any documents

--- a/editor/sass/code-editor-v2/code-editor.scss
+++ b/editor/sass/code-editor-v2/code-editor.scss
@@ -90,7 +90,9 @@ strong {
 }
 
 #ui-code {
-    display: block;
+    &:not(.hidden) {
+        display: block;
+    }
     height: calc(100% - 32px);
     > .content {
         height: 100%;
